main tests for menu screen created